added twitter logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             </ul>
         </nav>
 
-        <a href="#"><button>Twitter</button></a>
+        <a href="#">
+            <button><img  id="twitter-logo" src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png"/>
+            </button></a>
     </header>
 
     <div id="home-content">
